--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,14 @@
         <h1>Medical Cost Estimation Study</h1>
         <p>Thank you for participating in our research to estimate medical costs!</p>
         <h2>About the Study</h2>
-        <p>You are working in an insurance company and you will estimate medical costs (the expenses for healthcare services individuals incur) based on the following individual information:</p>
+        <p>Imagine that you are a medical insurance employee and you need to estimate medical costs (the expenses for healthcare services patients incur) based on the following patient information:</p>
         <ul>
             <li>Age</li>
             <li>Sex</li>
             <li>BMI (Body Mass Index)</li>
             <li>Smoker Status</li>
-            <li>Region</li>
         </ul>
-        <p>There are some practice questions to help you get accurate estimates and then the main questions will be shown.</p>
+        <p>There are two practice tasks to help you get accurate estimates, followed by eight main tasks.</p>
         <h2>Time</h2>
         <p>~10–15 minutes</p>
         <form action="{{ url_for('start') }}" method="post">
