--- a/templates/practice_info.html
+++ b/templates/practice_info.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Practice Information</h1>
-        <p>Given the information of individuals, medical cost will generally increase as they get older. The medical cost will be slightly more for men. Increasing the BMI will increase the chance of more medical cost and the chances of higher medical cost for smokers.</p>
+        <p>Medical cost will generally increase as one gets older. The medical cost is slightly higher for men. Increasing the BMI will increase the chance of higher medical costs, and the medical cost for smokers is higher.</p>
         <form action="{{ url_for('practice') }}" method="get">
             <button type="submit">Start Practice</button>
         </form>
