--- a/templates/practice_result.html
+++ b/templates/practice_result.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Result: Individual {{ customer_number }} of 5</title>
+    <title>Practice Result: Patient {{ customer_number }} of 2</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Practice Result: Individual {{ customer_number }} of 5</h1>
+        <h1>Practice Result: Patient {{ customer_number }} of 2</h1>
         <table class="info-table">
             <tr><th>Age</th><td>{{ customer_info['age'] }}</td></tr>
             <tr><th>Sex</th><td>{{ customer_info['sex'] }}</td></tr>
             <tr><th>BMI</th><td>{{ customer_info['bmi']|round(1) }}</td></tr>
             <tr><th>Smoker</th><td>{{ customer_info['smoker'] }}</td></tr>
-            <tr><th>Region</th><td>{{ customer_info['region'] }}</td></tr>
         </table>
-        <p>Your Guess: ${{ initial_guess|round(2) }}</p>
-        <p>True Charge: ${{ true_charge|round(0) }}</p>
+        <p>Your Estimated Medical Cost: ${{ initial_guess|int }}</p>
+        <p>True Medical Cost: ${{ true_charge|int }}</p>
         <form action="{{ url_for('practice') }}" method="get">
             <button type="submit">Next Practice</button>
         </form>
