--- a/templates/transition.html
+++ b/templates/transition.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Ready for the Main Study!</h1>
-        <p>Great job completing the two practice tasks! Now, let’s dive into the main study to estimate medical costs with AI insights. Your accuracy counts!</p>
+        <p>Great job completing the five practice tasks! Now, let’s dive into the main study to estimate medical costs with AI insights. Your performance will be measured by how many times (out of the 8 main tasks) your estimate is as good as or better than the AI’s prediction. Pay close attention to the information provided during the main tasks to improve your estimates.</p>
         <form action="{{ url_for('task') }}" method="get">
             <button type="submit">Start Main Study</button>
         </form>
