--- a/templates/practice_info.html
+++ b/templates/practice_info.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Practice Information</h1>
         <p>Medical cost will generally increase as one gets older. The medical cost is slightly higher for men. Increasing the BMI will increase the chance of higher medical costs, and the medical cost for smokers is higher.</p>
+        <p><strong>The average insurance cost for all population in this dataset is $13,700.</strong></p>
         <form action="{{ url_for('practice') }}" method="get">
             <button type="submit">Start Practice</button>
         </form>
