--- a/templates/practice_result.html
+++ b/templates/practice_result.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Result: Patient {{ customer_number }} of 2</title>
+    <title>Practice Result: Patient {{ customer_number }} of 5</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Practice Result: Patient {{ customer_number }} of 2</h1>
+        <h1>Practice Result: Patient {{ customer_number }} of 5</h1>
+        <p><strong>{{ performance_message }}</strong></p>
         <table class="info-table">
             <tr><th>Age</th><td>{{ customer_info['age'] }}</td></tr>
             <tr><th>Sex</th><td>{{ customer_info['sex'] }}</td></tr>
@@ -16,6 +17,7 @@
             <tr><th>Smoker</th><td>{{ customer_info['smoker'] }}</td></tr>
         </table>
         <p>Your Estimated Medical Cost: ${{ initial_guess|int }}</p>
+        <p>AI Predicted Medical Cost: ${{ ai_prediction|int }}</p>
         <p>True Medical Cost: ${{ true_charge|int }}</p>
         <form action="{{ url_for('practice') }}" method="get">
             <button type="submit">Next Practice</button>
