--- a/templates/results.html
+++ b/templates/results.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>Summary: Patient {{ customer_number }} of 8</h1>
+        {% if performance_message %}
+            <p><strong>{{ performance_message }}</strong></p>
+        {% endif %}
         <p>Your Initial Estimated Medical Cost: ${{ initial_guess|int }}</p>
         <p>AI Predicted Medical Cost: ${{ ai_prediction|int }}</p>
         <p>Your Final Estimated Medical Cost: ${{ final_guess|int }}</p>
