Add Google verificationg

--- a/templates/end.html
+++ b/templates/end.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Thank You!</h1>
         <p>Thank you for participating in this experiment. Your performance was {{ performance_score }}%.</p>
-        <p>Please provide this code to our Prolific platform to finalize your participation: {{ participant_id }}</p>
+        <p>Please provide this code to our Prolific platform to finalize your participation: C1FHYQ9H</p>
     </div>
 </body>
 </html>
